tests/fixtures/sample-js-project-positive/shared/utils/src/errors/catch-a53c5ce9.ts
export async function fn_a53c5ce9(): Promise<void> {
  try {
    throw new Error("oops");
  } catch (e) {
    console.error(e);
  }
}
